--- a/partials/schedule.html
+++ b/partials/schedule.html
@@ -139,7 +139,7 @@
                                                 <input type="text" class="form-control" ng-model="_details.Phone" id="dphone">
                                                 <div class="input-group-prepend">
                                                     <span class="input-group-text">
-                                                        <a href="" ng-click="openPhoneTab()">
+                                                        <a href="" ng-click="openPhoneTab(_details.Phone)">
                                                             <i class="material-icons" style="color:#00BCD4; margin-top: -20px;border: 1px solid; border-radius: 5px;">call</i>
                                                         </a>
                                                     </span>
