--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -13,6 +13,11 @@
 /*
  *  STYLE 11
  */
+ 
+.pre-scrollable-2 {
+    max-height: 100%;
+    overflow-y: scroll;
+}
 
 .sms-scroll::-webkit-scrollbar-track {
     -webkit-box-shadow: inset 0 0 6px rgba(31, 172, 277, 0.3);
