--- a/partials/calendar.html
+++ b/partials/calendar.html
@@ -202,7 +202,7 @@
                                         <div class="form-group">
                                             <div class="input-group add">
                                                 <label for="coso">Cơ sở</label>
-                                                <select class="form-control" ng-model="selectedCenter" ng-options="option.name for option in Center">
+                                                <select class="form-control" ng-model="selectedCenter" ng-options="option.Name for option in Center">
                                                 </select>
                                             </div>
                                         </div>
@@ -425,14 +425,14 @@
                                         <div class="form-group">
                                             <div class="input-group add">
                                                 <label for="coso">Cơ sở</label>
-                                                <select class="form-control" ng-model="addselectedCenter" ng-options="option.name for option in Center">
+                                                <select class="form-control" ng-model="addselectedCenter" ng-options="option.Name for option in Center">
                                                 </select>
                                             </div>
                                         </div>
                                         <div class="form-group">
                                             <div class="input-group add">
                                                 <label for="trangthai">Trạng thái</label>
-                                                <select class="form-control" ng-model="addselectedStatus" ng-options="option.name for option in Status2">
+                                                <select class="form-control" ng-model="addselectedStatus" ng-options="option.name for option in Status">
                                                 </select>
                                             </div>
                                         </div>
