--- a/partials/send.html
+++ b/partials/send.html
@@ -197,7 +197,7 @@
                                         <div class="form-group">
                                             <div class="input-group add">
                                                 <label for="coso">Cơ sở</label>
-                                                <select class="form-control" ng-model="selectedCenter" ng-options="option.name for option in Center">
+                                                <select class="form-control" ng-model="selectedCenter" ng-options="option.Name for option in Center">
                                                 </select>
                                             </div>
                                         </div>
@@ -416,7 +416,7 @@
                                         <div class="form-group">
                                             <div class="input-group add">
                                                 <label for="coso">Cơ sở</label>
-                                                <select class="form-control" ng-model="addselectedCenter" ng-options="option.name for option in Center">
+                                                <select class="form-control" ng-model="addselectedCenter" ng-options="option.Name for option in Center">
                                                 </select>
                                             </div>
                                         </div>
