--- a/partials/home.html
+++ b/partials/home.html
@@ -28,7 +28,7 @@
                                                 <div class="col-lg-6">
                                                     <div class="input-group add">
                                                         <label for="coso">Cơ sở</label>
-                                                        <select class="form-control" ng-model="HCenter" ng-options="option.name for option in Center">
+                                                        <select class="form-control" ng-model="HCenter" ng-options="option.Name for option in Center">
                                                         </select>
                                                     </div>
                                                 </div>
@@ -200,7 +200,7 @@
                                         <div class="form-group">
                                             <div class="input-group add">
                                                 <label for="coso">Cơ sở</label>
-                                                <select class="form-control" ng-model="selectedCenter" ng-options="option.name for option in Center">
+                                                <select class="form-control" ng-model="selectedCenter" ng-options="option.Name for option in Center">
                                                 </select>
                                             </div>
                                         </div>
@@ -414,7 +414,7 @@
                                         <div class="form-group">
                                             <div class="input-group add">
                                                 <label for="coso">Cơ sở</label>
-                                                <select class="form-control" ng-model="maddselectedCenter" ng-options="option.name for option in Center">
+                                                <select class="form-control" ng-model="maddselectedCenter" ng-options="option.Name for option in Center">
                                                 </select>
                                             </div>
                                         </div>
@@ -558,7 +558,7 @@
                                         <div class="form-group">
                                             <div class="input-group add">
                                                 <label for="coso">Cơ sở</label>
-                                                <select class="form-control" ng-model="addselectedCenter" ng-options="option.name for option in Center">
+                                                <select class="form-control" ng-model="addselectedCenter" ng-options="option.Name for option in Center">
                                                 </select>
                                             </div>
                                         </div>
