--- a/partials/notcalled.html
+++ b/partials/notcalled.html
@@ -191,7 +191,7 @@
                                         <div class="form-group">
                                             <div class="input-group add">
                                                 <label for="coso">Cơ sở</label>
-                                                <select class="form-control" ng-model="selectedCenter" ng-options="option.name for option in Center">
+                                                <select class="form-control" ng-model="selectedCenter" ng-options="option.Name for option in Center">
                                                 </select>
                                             </div>
                                         </div>
@@ -414,7 +414,7 @@
                                         <div class="form-group">
                                             <div class="input-group add">
                                                 <label for="coso">Cơ sở</label>
-                                                <select class="form-control" ng-model="addselectedCenter" ng-options="option.name for option in Center">
+                                                <select class="form-control" ng-model="addselectedCenter" ng-options="option.Name for option in Center">
                                                 </select>
                                             </div>
                                         </div>
