--- a/partials/srating.html
+++ b/partials/srating.html
@@ -47,7 +47,9 @@
                                         <th>Họ Tên</th>
                                         <th>Online</th>
                                         <th>Đăng ký học</th>
+										<th>Số Khóa</th>
                                         <th>Phần trăm</th>
+										
                                     </tr>
                                 </thead>
                                 <tbody>
@@ -57,6 +59,7 @@
                                         <td ng-bind="content.Name"></td>
                                         <td ng-bind="content.On"></td>
                                         <td ng-bind="content.Reg.length"></td>
+										<td ng-bind="content.Khoa"></td>
                                         <td ng-if="content.On > 0">{{content.Reg.length / content.On *100}} %</td>
                                         <td ng-if="content.On === 0">0 %</td>
                                     </tr>
