--- a/partials/home.html
+++ b/partials/home.html
@@ -207,7 +207,7 @@
                                         <div class="form-group">
                                             <div class="input-group add">
                                                 <label for="trangthai">Trạng thái</label>
-                                                <select class="form-control" ng-model="selectedStatus" ng-options="option.name for option in Status">
+                                                <select class="form-control" ng-model="selectedStatus" ng-options="option.name for option in Status2">
                                                 </select>
                                             </div>
                                         </div>
