--- a/partials/home.html
+++ b/partials/home.html
@@ -35,7 +35,7 @@
                                                 <div class="col-lg-6">
                                                     <div class="input-group add">
                                                         <label for="HStatus">Trạng thái</label>
-                                                        <select class="form-control" ng-model="HStatus" ng-options="option.name for option in Status">
+                                                        <select class="form-control" ng-model="HStatus" ng-options="option.name for option in Status2">
                                                         </select>
                                                     </div>
                                                 </div>
@@ -207,7 +207,7 @@
                                         <div class="form-group">
                                             <div class="input-group add">
                                                 <label for="trangthai">Trạng thái</label>
-                                                <select class="form-control" ng-model="selectedStatus" ng-options="option.name for option in Status2">
+                                                <select class="form-control" ng-model="selectedStatus" ng-options="option.name for option in Status">
                                                 </select>
                                             </div>
                                         </div>
