--- a/partials/recall.html
+++ b/partials/recall.html
@@ -178,7 +178,7 @@
                                         <div class="form-group">
                                             <div class="input-group add">
                                                 <label for="dayreg2">Ngày Báo Danh</label>
-                                                <input type="date" class="form-control" id="dayreg2">
+                                                <input type="date" class="form-control" id="dayreg2" disabled>
                                             </div>
                                         </div>
                                     </div>
