--- a/partials/scenter.html
+++ b/partials/scenter.html
@@ -27,7 +27,7 @@
                                                     <div class="input-group add">
                                                         <label for="form">Groups</label>
 														<select class="form-control" ng-model="mgroup"
-                                                            ng-options="option.Name for option in AllGroups" ng-change="_change()">
+                                                            ng-options="option.Name for option in AllGroups">
                                                         </select>
                                                     </div>
                                                 </div>
