--- a/partials/schedule.html
+++ b/partials/schedule.html
@@ -37,7 +37,7 @@
                                             <div class="input-group add">
                                                 <div class="row">
                                                     <div class="col-lg-6">
-                                                        <a href="#" class="btn btn-info btn-block" style="margin-left: 20px"
+                                                        <a href="#" class="btn sas-bk btn-block" style="margin-left: 20px"
                                                             ng-click="Searchwith()">
                                                             <i class="material-icons">search</i> Tìm Kiếm
                                                         </a>
@@ -140,7 +140,7 @@
                                                 <div class="input-group-prepend">
                                                     <span class="input-group-text">
                                                         <a href="" ng-click="openPhoneTab(_details.Phone)">
-                                                            <i class="material-icons" style="color:#00BCD4; margin-top: -20px;border: 1px solid; border-radius: 5px;">call</i>
+                                                            <i class="material-icons sas-color" style="margin-top: -20px;border: 1px solid; border-radius: 5px;">call</i>
                                                         </a>
                                                     </span>
                                                 </div>
@@ -243,7 +243,7 @@
                                                 ng-disabled="_details.Status_student[0].id === 3" ng-click="up_detail()">Cập
                                                 Nhật
                                             </button>
-                                            <button class="btn btn-info btn-block"  ng-click="showsms()">SMS</button>
+                                            <button class="btn sas-bk btn-block"  ng-click="showsms(_details)">SMS</button>
                                             <!-- <button class="btn btn-info btn-block">Email</button> -->
                                         </div>
                                     </div>
@@ -313,7 +313,7 @@
                         </div>
                     </div>
                 </form>
-                <button type="button" class="btn btn-info btn-block" ng-click="up_detail_2()">Xác Nhận</button>
+                <button type="button" class="btn sas-bk btn-block" ng-click="up_detail_2()">Xác Nhận</button>
             </div>
         </div>
     </div>
@@ -364,7 +364,7 @@
                                                 <div class="input-group-prepend">
                                                     <span class="input-group-text">
                                                         <a href="" ng-click="openPhoneTab()">
-                                                            <i class="material-icons" style="color:#00BCD4; margin-top: -20px;border: 1px solid; border-radius: 5px;">call</i>
+                                                            <i class="material-icons sas-color" style="margin-top: -20px;border: 1px solid; border-radius: 5px;">call</i>
                                                         </a>
                                                     </span>
                                                 </div>
@@ -396,7 +396,7 @@
                                     </div>
                                     <div class="col-lg-1 p-0">
                                         <div class="form-group">
-                                            <button class="btn btn-warning btn-block btn-lg btn-add-new" style="padding-left: 17px;"
+                                            <button class="btn sas-bk btn-block btn-lg btn-add-new" style="padding-left: 17px;"
                                                 ng-click="addnewfromaddFriend(data)">Thêm
                                                 mới
                                             </button>
@@ -509,7 +509,7 @@
                             Mẫu</button>
                     </div>
                     <div class="col-lg-6">
-                        <button type="button" class="btn btn-info btn-block" ng-click="send(data)">Gửi Tin</button>
+                        <button type="button" class="btn sas-bk btn-block" ng-click="send(data)">Gửi Tin</button>
                     </div>
                     <div class="col-lg-3">
                         <button type="button" class="btn btn-warning btn-block" ng-click="clear_sms()">Xóa</button>
