--- a/partials/calendar.html
+++ b/partials/calendar.html
@@ -37,7 +37,7 @@
                                             <div class="input-group add">
                                                 <div class="row">
                                                     <div class="col-lg-6">
-                                                        <a href="#" class="btn btn-info btn-block" style="margin-left: 20px"
+                                                        <a href="#" class="btn sas-bk btn-block" style="margin-left: 20px"
                                                             ng-click="Searchwith()">
                                                             <i class="material-icons">search</i> Tìm Kiếm
                                                         </a>
@@ -143,7 +143,7 @@
                                                 <div class="input-group-prepend">
                                                     <span class="input-group-text">
                                                         <a href="" ng-click="openPhoneTab(_details.Phone)">
-                                                            <i class="material-icons" style="color:#00BCD4; margin-top: -20px;border: 1px solid; border-radius: 5px;">call</i>
+                                                            <i class="material-icons sas-color" style="margin-top: -20px;border: 1px solid; border-radius: 5px;">call</i>
                                                         </a>
                                                     </span>
                                                 </div>
@@ -250,7 +250,7 @@
                                             ng-show="auth.Role[0].id === 0" ng-click="up_detail()">Cập
                                             Nhật
                                         </button>
-                                            <button class="btn btn-info btn-block" ng-click="showsms()">SMS</button>
+                                            <button class="btn sas-bk btn-block" ng-click="showsms(_details)">SMS</button>
                                             <!-- <button class="btn btn-info btn-block">Email</button> -->
                                         </div>
                                     </div>
@@ -319,7 +319,7 @@
                         </div>
                     </div>
                 </form>
-                <button type="button" class="btn btn-info btn-block" ng-click="up_detail_2()">Xác Nhận</button>
+                <button type="button" class="btn sas-bk btn-block" ng-click="up_detail_2()">Xác Nhận</button>
             </div>
         </div>
     </div>
@@ -370,7 +370,7 @@
                                                 <div class="input-group-prepend">
                                                     <span class="input-group-text">
                                                         <a href="" ng-click="openPhoneTab()">
-                                                            <i class="material-icons" style="color:#00BCD4; margin-top: -20px;border: 1px solid; border-radius: 5px;">call</i>
+                                                            <i class="material-icons sas-color" style="margin-top: -20px;border: 1px solid; border-radius: 5px;">call</i>
                                                         </a>
                                                     </span>
                                                 </div>
@@ -402,7 +402,7 @@
                                     </div>
                                     <div class="col-lg-1 p-0">
                                         <div class="form-group">
-                                            <button class="btn btn-warning btn-block btn-lg btn-add-new" style="padding-left: 17px;"
+                                            <button class="btn sas-bk btn-block btn-lg btn-add-new" style="padding-left: 17px;"
                                                 ng-click="addnewfromaddFriend(data)">Thêm
                                                 mới
                                             </button>
@@ -516,7 +516,7 @@
                             Mẫu</button>
                     </div>
                     <div class="col-lg-6">
-                        <button type="button" class="btn btn-info btn-block" ng-click="send(data)">Gửi Tin</button>
+                        <button type="button" class="btn sas-bk btn-block" ng-click="send(data)">Gửi Tin</button>
                     </div>
                     <div class="col-lg-3">
                         <button type="button" class="btn btn-warning btn-block" ng-click="clear_sms()">Xóa</button>
