--- a/partials/login.html
+++ b/partials/login.html
@@ -41,7 +41,7 @@
                         </form>
                     </div>
                     <div class="card-footer">
-                        <button type="submit" class="btn btn-info btn-block" ng-click="login()">Login</button>
+                        <button type="submit" class="btn sas-bk btn-block" ng-click="login()">Login</button>
                     </div>
                 </div>
             </div>
@@ -61,7 +61,7 @@
                 </button>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-info" ng-click="choosepage(1)">Telesale</button>
+                <button type="button" class="btn sas-bk" ng-click="choosepage(1)">Telesale</button>
                 <button type="button" class="btn btn-primary" ng-click="choosepage(2)">Marketing</button>
             </div>
         </div>
