--- a/partials/setup.html
+++ b/partials/setup.html
@@ -25,7 +25,7 @@
 								</td>
                                 <td class="text-center">{{content.Fullname}}</td>
                                 <td class="text-center">
-                                    <button class="btn btn-info btn-round" ng-click="OpenShare(content)">
+                                    <button class="btn sas-bk btn-round" ng-click="OpenShare(content)">
                                         Chuyển học viên
 									</button>
 								</td>
