--- a/partials/statistics.html
+++ b/partials/statistics.html
@@ -1,6 +1,6 @@
 <div class="main-panel">
     <div class="content">
-        <nav class="navbar navbar-expand-lg navbar-light bg-info" style="margin-top:28px">
+        <nav class="navbar navbar-expand-lg navbar-light sas-bk" style="margin-top:28px; color: #fff">
             <div class="container">
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
@@ -67,7 +67,7 @@
 							</div>
 						</div>
                         <div ng-class="{'col-lg-3' : auth.Role[0].id === 0 , 'col-lg-4' : auth.Role[0].id !== 0}" >
-                            <button type="button" class="btn btn-primary btn-block" ng-click="fillbyday()">Lọc</button>
+                            <button type="button" class="btn sas-bk btn-block" ng-click="fillbyday()">Lọc</button>
 							
 						</div>
 					</div>
